--- a/Tribute_page/index.html
+++ b/Tribute_page/index.html
@@ -13,7 +13,7 @@
     <main id="main">
         <header>
             <h1 id="title">Luke Skywalwer</h1>
-            <h2 id="sub-title">El jedi mas pijudo</h2>
+            <h2 id="sub-title">El ultimo caballero Jedi</h2>
         </header>
         <figure id="img-div">
             <img id="image" src="https://pm1.narvii.com/6788/65dda030140aaabe70a1890424ad5ee174d8b04dv2_hq.jpg" alt="">
