--- a/Tribute_page/index.html
+++ b/Tribute_page/index.html
@@ -25,22 +25,62 @@
             </h3>
 
             <ul>
-                <li><strong>19 ABY</strong> - Nace junto a su hermana gemela Leia y es enviado a Tatooine </li>
-                <li><strong>0 ABY</strong> - Se convierte en aprendiz del maestro Obi-Wan Kenobi</li>
-                <li><strong>0 ABY</strong> - Con la ayuda de los rebeldes destruyen la Estrella de la Muerte</li>
-                <li><strong>3 DBY</strong> - Empieza su entrenamiento con el maestro Yoda</li>
-                <li><strong>3 DBY</strong> - Pierde su mano en una batalla contra su padre Darth Vader</li>
-                <li><strong>4 DBY</strong> - Retoma su entrenamiento con Yoda y descubre que Leia es su hermana</li>
-                <li><strong>4 DBY</strong> - Se enfrenta al emperador y es salvado por su padre, donde este y el
-                    emperador mueren</li>
-                <li><strong>9 DBY</strong> - Conoce a Grogu y decide entrenarlo en los caminos de la fuerza</li>
-                <li><strong>15 DBY</strong> - Luego de la caida del imperio comienza a entrenar Padawan, empezando por
-                    el hijo de Leia, Ben</li>
-                <li><strong>34 DBY</strong> - Despues de muchos años viviendo en reclusion es encontrado por Rey y
-                    decide entrenarla</li>
-                <li><strong>34 DBY</strong> - Vuelve a unirse a la resistencia</li>
-                <li><strong>34 DBY</strong> - Se enfrenta con Kylo Ren y luego de proyectarse su cuerpo en batalla,
-                    muere y se une a la fuerza</li>
+                <li>
+                    <p class="cronology_date">19 ABY</p>
+                    <p class="cronology_desc">Nace junto a su hermana gemela Leia y es enviado a Tatooine.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">0 ABY </p>
+                    <p class="cronology_desc">Se convierte en aprendiz del maestro Obi-Wan Kenobi.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">0 ABY</p>
+                    <p class="cronology_desc">Con la ayuda de los rebeldes destruyen la Estrella de la Muerte.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">3 DBY</p>
+                    <p class="cronology_desc">Empieza su entrenamiento con el maestro Yoda.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">3 DBY </p>
+                    <p class="cronology_desc">Pierde su mano en una batalla contra su padre Darth Vader.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">4 DBY</p>
+                    <p class="cronology_desc">Retoma su entrenamiento con Yoda y descubre que Leia es su hermana.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">4 DBY </p>
+                    <p class="cronology_desc">Se enfrenta al emperador y es salvado por su padre, donde este y el
+                        emperador mueren.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">9 DBY </p>
+                    <p class="cronology_desc">Conoce a Grogu y decide entrenarlo en los caminos de la fuerza.</p>
+                </li>
+                <li>
+                    <p class="cronology_date">15 DBY </p>
+                    <p class="cronology_desc">
+                        Luego de la caida del imperio comienza a entrenar Padawan, empezando por el hijo de Leia, Ben.
+                    </p>
+                </li>
+                <li>
+                    <p class="cronology_date">34 DBY</p>
+                    <p class="cronology_desc">
+                        Despues de muchos años viviendo en reclusion es encontrado por Rey y decide entrenarla.
+                    </p>
+                </li>
+                <li>
+                    <p class="cronology_date">34 DBY </p>
+                    <p class="cronology_desc">Vuelve a unirse a la resistencia</p>
+                </li>
+                <li>
+                    <p class="cronology_date">34 DBY </p>
+                    <p class="cronology_desc">
+                        Se enfrenta con Kylo Ren y luego de proyectarse su cuerpo en
+                        batalla, muere y se une a la fuerza.
+                    </p>
+                </li>
             </ul>
 
             <p id="quote-text">
@@ -51,10 +91,10 @@
             </cite>
 
         </section>
-        <h3 id="more-info">
+        <h4 id="more-info">
             Si quieres saber mas sobre este personaje visita <a
                 href="https://starwars.fandom.com/es/wiki/Luke_Skywalker" target="_blank">ESTE LINK</a>
-        </h3>
+        </h4>
 
     </main>
 </body>
