Changed footer link ID to pass the test

--- a/Tribute_page/index.html
+++ b/Tribute_page/index.html
@@ -91,7 +91,7 @@
             </cite>
 
         </section>
-        <h4 id="more-info">
+        <h4 id="tribute-link">
             Si quieres saber mas sobre este personaje visita <a
                 href="https://starwars.fandom.com/es/wiki/Luke_Skywalker" target="_blank">ESTE LINK</a>
         </h4>
