Fixed ID selectors

--- a/Tribute_page/index.html
+++ b/Tribute_page/index.html
@@ -91,8 +91,8 @@
             </cite>
 
         </section>
-        <h4 id="tribute-link">
-            Si quieres saber mas sobre este personaje visita <a
+        <h4 id="more-info">
+            Si quieres saber mas sobre este personaje visita <a id="tribute-link"
                 href="https://starwars.fandom.com/es/wiki/Luke_Skywalker" target="_blank">ESTE LINK</a>
         </h4>
 
