--- a/Tribute_page/index.html
+++ b/Tribute_page/index.html
@@ -12,7 +12,7 @@
 <body>
     <main id="main">
         <header>
-            <h1 id="title">Luke Skywalwer</h1>
+            <h1 id="title">Luke Skywalker</h1>
             <h2 id="sub-title">El ultimo caballero Jedi</h2>
         </header>
         <figure id="img-div">
