--- a/Survey Page/index.html
+++ b/Survey Page/index.html
@@ -12,19 +12,21 @@
 <body>
     <div class="container">
         <h1 id="title">Titulo de la encuesta</h1>
-        <h2 id="description">Breve descripcion de la encuesta</h2>
+        <p id="description">Breve descripcion de la encuesta</p>
         <form action="" id="survey-form">
             <div class="form-group">
                 <label for="name" id="name-label">Nombre:</label>
                 <input type="text" id="name" name="name" value="" placeholder="Ingrese su nombre" required>
             </div>
             <div class="form-group">
-                <label for="email" id="email-label">Ingrese su email</label>
+                <label for="email" id="email-label">Ingrese su
+                    email</label>
                 <input type="email" name="email" id="email" placeholder="Ingrese su email" required>
             </div>
             <div class="form-group">
-                <label for="number" id="number-label">Edad <span>(opcional)</span> </label>
-                <input type="number" name="age" id="number" min="1" max="99">
+                <label for="number" id="number-label" class=" form-group_title">Edad
+                    <span>(opcional)</span> </label>
+                <input type="number" name="age" id="number" min="1" max="99" placeholder="ingrese su edad">
             </div>
             <div class="form-group">
                 <label for="dropdown">Elija su profesion:</label>
@@ -43,11 +45,11 @@
                     <label for="job">Para conseguir empleo</label>
                 </div>
                 <div class="option">
-                    <input type="radio" name="motivation" id="Personal" value="personal">
+                    <input type="radio" name="motivation" id="personal" value="personal">
                     <label for="personal">Interes personal / Hobby</label>
                 </div>
                 <div class="option">
-                    <input type="radio" name="motivation" id="Other" value="other">
+                    <input type="radio" name="motivation" id="other" value="other">
                     <label for="other">Otra</label>
                 </div>
             </div>
